v10.4.0/_sources/generated/pcdsdevices.twincat_motor.TwinCATAxis.rst.txt
pcdsdevices.twincat\_motor.TwinCATAxis
======================================

.. currentmodule:: pcdsdevices.twincat_motor

.. autoclass:: TwinCATAxis

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - setpoint
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:fPosition``
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - readback
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:fActPosition``
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - done
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bDone``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - actuate
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bMoveCmd``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - stop_signal
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bHalt``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - reset_signal
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bReset``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - velocity
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:fVelocity``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - acceleration
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:fAcceleration``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - deceleration
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:fDeceleration``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - jerk
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:fJerk``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - enable_mode
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:eEnableMode``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - brake_mode
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:eBrakeMode``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - motor_is_moving
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bMoving``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - motor_is_moving_negative
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bNegativeDirection``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - motor_is_moving_positive
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bPositiveDirection``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - power_is_enabled
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bPowerIsEnabled``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - fwd_enabled
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bForwardEnabled``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - bwd_enabled
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bBackwardEnabled``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - high_limit_switch
          - :class:`~pcdsdevices.twincat_motor.InvertedBoolEpicsSignal`
          - ``fwd_enabled``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - low_limit_switch
          - :class:`~pcdsdevices.twincat_motor.InvertedBoolEpicsSignal`
          - ``bwd_enabled``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - negative_dir_enabled
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bNegativeMotionIsEnabled``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - positive_dir_enabled
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bPositiveMotionIsEnabled``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - command
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:eCommand``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - motor_egu
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:NC:Eu:Val``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - low_limit_travel
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:NC:MinPos:Val_RBV``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - high_limit_travel
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:NC:MaxPos:Val_RBV``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - low_limit_enable
          - :class:`~pcdsdevices.twincat_motor.EnabledDisabledSignal`
          - ``:NC:SoftPosMinOn:Val_RBV``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - high_limit_enable
          - :class:`~pcdsdevices.twincat_motor.EnabledDisabledSignal`
          - ``:NC:SoftPosMaxOn:Val_RBV``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - pos_correction
          - :class:`~pcdsdevices.twincat_motor.EnabledDisabledSignal`
          - ``:NC:PosCorr:Val_RBV``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - backlash
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:NC:Backlash:Val_RBV``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - pos_cor_status
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:bBacklashStatus``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - home_mode
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:eHomeMode``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.twincat_motor.TwinCATMotorInterface`
    
        * - plc
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisPLC`
          - ``:``
          - PLC error handling and aux functions.
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: check_limit_switches
    .. automethod:: clear_error
    .. automethod:: clear_limits
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: home
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: mv_ginput
    .. automethod:: mvr
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: reset
    .. automethod:: screen
    .. automethod:: set
    .. automethod:: set_defaults
    .. automethod:: set_high_limit
    .. automethod:: set_low_limit
    .. automethod:: set_position
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: tweak
    .. automethod:: umv
    .. automethod:: umvr
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: actuate_value
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: done_value
    .. autoattribute:: egu
    .. autoattribute:: enabled
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: homed
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: put_complete
    .. autoattribute:: settle_time
    .. autoattribute:: stop_value
    .. autoattribute:: subscriptions
    .. autoattribute:: timeout
    .. autoattribute:: tolerated_alarm
    
    